# WServer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  http.c  log.c  resource.c  server.c
src/include/: config.h  http.h  log.h  resource.h
website/: index.html
